<resources>
    <string name="app_name">Computadora</string>

    <!--    Auth-->
    <string name="txt_user_name">Tên đăng nhập</string>
    <string name="txt_pass_word">Mật khẩu</string>
    <string name="txt_email">Email</string>
    <string name="txt_pass_repeat">Mật khẩu xác nhận</string>
    <string name="txt_sign_in">Đăng nhập</string>
    <string name="txt_sign_up">Đăng ký</string>
    <string name="txt_recover_password">Lấy lại mật khẩu</string>
    <string name="txt_redirect_to_Sign_IN">Đã có tài khoản</string>
    <string name="txt_redirect_to_Sign_UP">Chưa có tài khoản</string>
    <string name="txt_redirect_to_Recover_PW">Quên mật khẩu</string>

    <!--    Orther-->
    <string name="txt_seeMore">Xem thêm</string>
    <string name="txt_search_place_holder">Bạn muốn tìm gì ?</string>
    <string name="txt_main_function">Chức năng chính</string>
    <string name="txt_best_seller">Sản phẩm bán chạy</string>
    <string name="txt_our_product">Sản phẩm của chúng tôi</string>
    <string name="txt_back_to_home">Về trang chủ</string>
    <string name="txt_bought_history">Lịch sử mua hàng</string>
    <string name="txt_add_to_cart">Thêm vào giỏ hàng</string>
    <string name="txt_add_to_cart_success">Thêm vào giỏ hàng \n thành công</string>
    <string name="txt_pay">Thanh toán</string>
    <string name="txt_into_money">Thành tiền</string>
    <string name="txt_receipt">Hoá đơn</string>
    <string name="txt_receive_info">Thông tin nhận hàng</string>
    <string name="txt_confirm_receive_info">Xác nhận đơn hàng</string>
    <string name="txt_payment_success">Thanh toán thành công</string>
    <string name="txt_thank_for_your_support">Đơn hàng của bạn đã được xác nhận. Cảm ơn đã tin dùng Computadora!!!</string>
    <string name="txt_mainfunc_buyLaptop">Mua sắm laptop</string>
    <string name="txt_mainfunc_review">Đánh giá sản\n phẩm</string>
    <string name="txt_mainfunc_yourShare">Chia sẻ của bạn</string>
    <string name="txt_our_Blog">Tất cả blog</string>
    <string name="txt_back">Quay lại</string>


    <!--    Nav-item-->
    <string name="txt_bottom_nav_item_HOME">Trang chủ</string>
    <string name="txt_bottom_nav_item_LAPTOP">Sản phẩm</string>
    <string name="txt_bottom_nav_item_ACCOUNT">Tài khoản</string>
    <string name="txt_bottom_nav_item_BLOG">Blog</string>
    <string name="txt_bottom_nav_item_CART">Giỏ hàng</string>

    <!--    Profile-->
    <string name="txt_gender"> Giới tính</string>
    <string name="txt_name"> Tên</string>
    <string name="txt_Telephone">Số điện thoại</string>
    <string name="txt_change_info">Sửa thông tin</string>
    <string name="txt_change_password">Đổi mật khẩu</string>
    <string name="txt_log_out">Đăng xuất</string>
    <string name="txt_current_password">Mật khẩu hiện tại</string>
    <string name="txt_new_password">Mật khẩu mới</string>
    <string name="txt_new_password_repeat">Xác nhận mật khẩu mới</string>
    <string name="txt_save_changes">Xác nhận thay đổi</string>
    <string name="txt_city">Thành phố</string>
    <string name="txt_district">Quận</string>
    <string name="txt_subdistrict">Huyện</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_back_to_product">Xem sản phẩm khác</string>
    <string name="txt_random">Đơn hàng của bạn tại Computadora đang được xử lý vui lòng đợi</string>
    <string name="txt_random_date">20/12/2021</string>
    <string name="txt_random_hour">14:16</string>

</resources>