<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/txt_bottom_nav_item_HOME" />
    <item
        android:id="@+id/productFragment"
        android:icon="@drawable/ic_laptop"
        android:title="@string/txt_bottom_nav_item_LAPTOP" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/txt_bottom_nav_item_ACCOUNT" />
    <item
        android:id="@+id/blogFragment"
        android:icon="@drawable/ic_blog"
        android:title="@string/txt_bottom_nav_item_BLOG" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/txt_bottom_nav_item_CART" />
</menu>