<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="25dp"
    android:paddingBottom="15dp"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/button_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ID: 123123123123123123123123"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/toggle_img"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginEnd="4dp"
        android:translationZ="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_toggle"
        app:layout_constraintEnd_toEndOf="@+id/button_toggle"
        app:layout_constraintTop_toTopOf="@+id/button_toggle"
        app:srcCompat="@drawable/ic_arr_down" />

    <androidx.cardview.widget.CardView
        android:id="@+id/details_history"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="6sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_toggle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/product_history_img"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline53"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="156dp" />

            <TextView
                android:id="@+id/status_txt"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="TextView"
                android:textAllCaps="true"
                android:textColor="@color/payment_success_text"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="@+id/guideline53"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/txt_random"
                android:textColor="@color/pending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.066"
                app:layout_constraintStart_toStartOf="@+id/guideline53"
                app:layout_constraintTop_toBottomOf="@+id/status_txt" />

            <TextView
                android:id="@+id/date_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_random_date"
                android:textColor="@color/light_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline53"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.542" />

            <TextView
                android:id="@+id/hour_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_random_hour"
                android:textColor="@color/light_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.835"
                app:layout_constraintStart_toEndOf="@+id/date_history"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.542" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>